project 3 cpanel test part 2

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/michegdf/village_app/
-    - /bin/cp -R project3-village/* $DEPLOYPATH
+    - /bin/cp -R project3-village/. $DEPLOYPATH
